tests/js_error/source_locations/expression/yield_star/next_throws.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        throw new Error('next');
      }
    };
  }
}

function *generator() {
  yield* iterable;
}

let iter = generator();
iter.next();